welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:3: error: Missing closing brace `}' assumed here
def posFinale():Boolean={
^ZigZag:6: error: expected class or object definition
var x = 0
^ZigZag:7: error: expected class or object definition
while(!posFinale()){
^ZigZag:17: error: Missing closing brace `}' assumed here
		}
                ^